# AI-team

./: .claudeignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_team_session_investigation_MISSING_DATA.md  AI_team_session_investigation_REPORT.md  CLAUDE.md  __init__.py  dashboard_main.py  debug_validation.py  ecosystem.config.js  get_session.py  main.py  pm2-ressurect.bat  pyproject.toml  pytest.ini  requirements.txt  schema.prisma  server_main.py  test_agent_disable.py  test_agent_system.py  test_git_basic.py  test_git_detector.py  test_session_parser.py  test_unified_prompts.py  worker_main.py
.ai/: CONTEXT.md  DOC_MAP.md  NEXT_TASKS.md  workflow_architecture_audit.md  workflow_architecture_audit_handoff.md
config/: __init__.py  models.py  settings.py
context/: LOCAL_WORKER_ISOLATION_PLAN.md
docs/: AGENT_MESH_SPEC.md  AGENT_USAGE_GUIDE.md  ARCHITECTURE.md  BACKEND_HOOKS_STRATEGY.md  CLAUDE_HOOK_IDEAS.md  CLAWDBOT_INTEGRATION_PLAN.md  COCKPIT_REFACTOR_SPEC.md  CONTROL_CONTRACT.md  CONTROL_SURFACE_DEPLOY_RUNBOOK.md  CONTROL_SURFACE_UNIFICATION.md  CONVERSATION_DATA_FLOW.md  DEFERRED.md  ENV_FEATURE_FLAGS.md  FRONTEND_BACKEND_GAP.md  INDEX.md  LLM_TURN_OBSERVABILITY_SPEC.md  M1_CHECKLIST.md  M3_MANAGER_INVOCATION_SPEC.md  MESH_SELF_AWARENESS_PLAN.md  MODEL_PICKER_PLAN.md  MOVE_H_CHECKLIST.md  NEXT_TASKS.md  OPENCODE_SERVER_CONTEXT.md  OPERATIONS_PM2.md  OVERVIEW.md  P0_CLAUDE_GATEWAY_RESUME_REPLACEMENT_PLAN.md  PHASE_4_RUNBOOK.md  PRIOR_ART_MAX_REUSE.md  PROGRESS_LOG.md  PROMPT_COMPARISON.md  QUICK_START.md  README.md  ROADMAP.md  (+29 more)
(+490 files in other folders)
