[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-task-orchestrator"
version = "0.1.0"
description = "AI Task Orchestrator with LLAMA mediation and Claude Code bridge"
readme = "docs/README.md"
requires-python = ">=3.11"
authors = [{ name = "AI-team" }]
license = { text = "MIT" }
dependencies = [
  "watchdog==3.0.0",
  "pydantic>=2.10.0",
  "python-dotenv==1.0.0",
  "pyyaml>=6.0.1,<7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
llama = [
  "ollama>=0.1.7",
  "sentence-transformers>=2.2.2",
]
telegram = [
  "python-telegram-bot>=20.0",
]

[tool.setuptools]
packages = [
  "src",
  "config",
]
package-dir = {"" = "."}
include-package-data = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

